--- a/styles/site.css
+++ b/styles/site.css
@@ -16,11 +16,12 @@ button:focus {
 {
     background-image: url("https://i.redd.it/24y4a814zy801.jpg");
     height: 100%;
+    min-height: 500px;
 }
 
 #home h1{
 position: relative;
-top: 50%;
+top: 40%;
 font-family: 'Roboto Slab', serif;
 color: antiquewhite;
 }
@@ -33,4 +34,34 @@ color: antiquewhite;
   }
   .navbar.scrolled{
     background:#000;
+  }
+
+  .social
+  {
+
+    list-style-type: none;
+    position: absolute;
+    bottom: 0%;
+  }
+  .social li {
+    display: inline-block;
+ }
+
+
+  a:link {
+
+    color: white;
+  }
+  
+  a:visited {
+
+    color: white;
+  }
+  
+  a:hover {
+
+  }
+  
+  a:active {
+
   }
