Working on skills, about section

--- a/styles/site.css
+++ b/styles/site.css
@@ -32,6 +32,11 @@ a:hover, a:visited, a:link, a:active
   font-family: 'Roboto Slab', serif;
 }
 
+.my-auto{
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 /*Navbar section */
 .navbar{
   transition:500ms ease;
@@ -104,7 +109,6 @@ font-size:calc(30px + .5vw);
 
 /*About section */
 #about{
-  background-color: rgb(70, 84, 90);
 
   padding-top: 50px;
   padding-bottom: 50px;
@@ -112,7 +116,6 @@ font-size:calc(30px + .5vw);
 
 /*Skills section */
 #skills{
-  background-color: rgb(106, 172, 31);
 
   padding-top: 60px;
   padding-bottom: 50px;
@@ -126,7 +129,6 @@ font-size:calc(30px + .5vw);
 
 /*Projects section */
 #projects{
-/* background-color: rgb(29, 156, 135); */
 min-height: 500px;
 
 padding-top: 60px;
