--- a/styles/site.css
+++ b/styles/site.css
@@ -192,6 +192,16 @@ transition: 0.5s;
   max-height: 100%;
   display: block;
 }
+
+.techBadges{
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.badgeMine{
+  background-color: #eb9e78;
+}
+
 /*Footer section */
 footer{
   background-color: black;
